--- a/index.html
+++ b/index.html
@@ -54,5 +54,23 @@
             
         </div>
     </div>
+    <div class="locations">
+        <h2 id="locationshead">Locations</h2>
+        <div class="stores">
+            <div class="downtown">
+                <h3>Downtown</h3>
+            </div>
+            <div class="eastbay">
+                <h3>Downtown</h3>
+            </div>
+            <div class="oakdale">
+                <h3>Downtown</h3>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <h2>The Tea Cozy</h2>
+    </div>
+
   </body>
 </html>
