--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <span><a href="#">Mission</a></span>
                 <span><a href="#">Featured Tea</a>
-                <spa><a href="#">Locations</a>    
+                <span><a href="#">Locations</a>    
             </nav>
     </header>
     <div class="maincontent">
