--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <span><a href="#">Mission</a></span>
                 <span><a href="#">Featured Tea</a>
-                <span><a href="#">Locations</a>    
+                <span><a href="#locations">Locations</a>    
             </nav>
     </header>
     <div class="maincontent">
@@ -55,7 +55,9 @@
         </div>
     </div>
     <div class="locations">
+        
         <h2 id="locationshead">Locations</h2>
+        <a name="locations"></a> 
         <div class="stores">
             <div class="downtown">
                 <h3>Downtown</h3>
@@ -67,6 +69,7 @@
                 <h3>East Bayside</h3>
                 <h4>3433 Phisherman's Avenue</h4>
                 <h4>(Northwest Corner)</h4>
+                <h4>Portland, Maine</h4>
             </div>
             <div class="oakdale">
                 <h3>Oakdale</h3>
@@ -78,6 +81,8 @@
     </div>
     <div class="footer">
         <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
     </div>
 
   </body>
