--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" />
         </div>
             <nav>
-                <span><a href="#">Mission</a></span>
-                <span><a href="#">Featured Tea</a>
+                <span><a href="#ourmission">Mission</a></span>
+                <span><a href="#featuredtea">Featured Tea</a>
                 <span><a href="#locations">Locations</a>    
             </nav>
     </header>
     <div class="maincontent">
         <div class="mainimage">
+                <a name="ourmission"></a>
             <div class="ourmission">
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
@@ -25,28 +26,29 @@
         </div>
     </div>
         <div class="teamonth">
+                <a name="featuredtea"></a>
                 <h2>Tea of the Month</h2>
                 <h4>What's Steeping at The Tea Cozy?</h4>
         <div class="grouping">
-            <div class="berryblitz">
+            <div class="storeitem">
                 <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" />
                 <span>Fall Berry Blitz Tea</span>
             </div>
-            <div class="spicedrum">
+            <div class="storeitem">
                     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" />
                     <span>Spiced Rum</span>
             </div>
-            <div class="seasonaldonut">
+            <div class="storeitem">
                     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" />
                     <span>Seasonal Donut</span>
 
             </div>
-            <div class="seasonaldonut">
+            <div class="storeitem">
                     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" />
                     <span>Myrtle Avenue Tea</span>
 
             </div>
-            <div class="seasonaldonut">
+            <div class="storeitem">
                     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" />
                     <span>Bedford Bizarre Tea</span>
 
@@ -59,19 +61,19 @@
         <h2 id="locationshead">Locations</h2>
         <a name="locations"></a> 
         <div class="stores">
-            <div class="downtown">
+            <div class="storelocation">
                 <h3>Downtown</h3>
                 <h4>384 West 4th St</h4>
                 <h4>Suite 108</h4>
                 <h4>Portland, Maine</h4>
             </div>
-            <div class="eastbay">
+            <div class="storelocation">
                 <h3>East Bayside</h3>
                 <h4>3433 Phisherman's Avenue</h4>
                 <h4>(Northwest Corner)</h4>
                 <h4>Portland, Maine</h4>
             </div>
-            <div class="oakdale">
+            <div class="storelocation">
                 <h3>Oakdale</h3>
                 <h4>515 Crescent Avenue</h4>
                 <h4>Second Floor</h4>
